--- a/app/globals.css
+++ b/app/globals.css
@@ -6,11 +6,12 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero {
-	background-image: url("/bg.png");
+.farmlog {
+	background-image: url("/images/login.png");
 	background-size: cover;
+	width: 100%;
 	background-position: start;
-	padding: 0px;
+	padding-top: 50px;
 	height: 100vh;
 }
 
