--- a/app/globals.css
+++ b/app/globals.css
@@ -70,6 +70,19 @@ body {
 	background-color: #f04f4a;
 }
 
+.text {
+	color: #333 !important;
+	font-size: 14px;
+	line-height: 1.5;
+	z-index: 1200;
+}
+
+.modal {
+	max-height: 80vh;
+	width: 500px;
+	overflow-y: auto;
+}
+
 .special-btn {
 	width: 300px;
 }
